# velociraptor_cli

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  NOTICE  PLAN.md  README.md  SECURITY.md  TODO.md  pyproject.toml
docs/: README.md  api-coverage.md  architecture.md  cli-reference.md  configuration.md  development.md  installation.md  soar-playbooks.md
docs/phase-plans/: README.md  phase-4.md  phase-5.md
scripts/: check_no_keys.py  check_spec_drift.py  gen_cli_docs.py
spec/: velociraptor-api-v1.yaml
src/vrcli/: __init__.py  config.py  errors.py  pagination.py  transport.py
src/vrcli/api/: __init__.py  artifacts.py  clients.py  flows.py  hunts.py  labels.py
src/vrcli/cli/: __init__.py  _common.py  artifacts.py  clients.py  flows.py  hunts.py  labels.py  main.py  ops.py  ops_contain.py  ops_enrich.py  ops_ioc_hunt.py  ops_live.py  ops_triage.py
src/vrcli/ops/: __init__.py  _audit.py  _collect.py  _evidence.py  _wait.py  containment.py  enrich.py  ioc_hunt.py  live_response.py  triage.py
tests/: conftest.py  test_api_artifacts.py  test_api_clients.py  test_api_flows.py  test_api_hunts.py  test_api_labels.py  test_cli_artifacts.py  test_cli_common.py  test_cli_flows.py  test_cli_hunts.py  test_cli_labels.py  test_cli_main.py  test_collect.py  test_config.py  test_ops_contain.py  test_ops_enrich.py  test_ops_infra.py  test_ops_ioc_hunt.py  test_ops_live.py  test_ops_triage.py  test_pagination.py  test_spec_drift.py  test_transport.py
